--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="text-box">
                 <h2 style="font-size: 45px;">📱📄           Contacts & Documents            📄📱</h2>
                 <p>Here you can find all the info needed to contact / reach out to me.<br>Do not worry, <b> this will always stay updated!</b><br><br>
-                 <a style="font-size:25px" href="/" download="KevinCaplescuCV.pdf"><u>Latest copy of my CV📄</u><br><br><a>
+                 <a style="font-size:25px" href="" download="KevinCaplescuCV.pdf"><u>Latest copy of my CV📄</u><br><br><a>
                  <a href="mailto:kevincncaplescu@gmail.com"><u>Click here to write me an email (kevincncaplescu@gmail.com)!</u><br><a>
                 </p>
             </div>
