--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     
-    <body style="background-color: #84c2ab;">
+    <body id="main_body" style="background-color: rgba(132, 194, 171);">
+        <div class="bg-overlay" id="bg-fade"></div>
         <div class="container">
-            <h1 id="title" class="text-center"></h1>
-            <p id="little-title" class="text-center"></p>
+            <h1 id="title" style="font-weight: bold;" class="text-center"></h1>
+            <p id="little-title" style="font-weight: bold;" class="text-center"></p>
             
             <!-- Text boxes to showcase content -->
             <div class="text-box">
