--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kevin's Portafolio!</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="main-css.css" />
 </head>
 <body>
   <div class="container text-center mt-5">
