--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kevin's Portafolio!</title>
+  <title>Portfolio</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main-css.css" />
 </head>
-<body>
+<body class="fade-in">
   <div class="container text-center mt-5">
     <h1 class="typew" id="main-title">Kevin Caplescu</h1>
     <p class="typew2" id="main-title">I welcome you to my portfolio website!</p>
@@ -79,3 +79,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main-jscript.js"></script>
 </body>
+</html>
+
