--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main-css.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body class="fade-in">
   <div class="container text-center mt-5">
@@ -36,10 +36,10 @@
 
   <div class="dashboard" id="skillsDashboard">
     <h2>My Tech-Skills: 💻</h2>
-    <p><b>Front-End:</b> HTML & CSS - pure JavaScript<br><br>
-        <b>Back-End:</b> Python - Lua<br><br>
-        <b>Frameworks:</b> Flask (Python WebDev) - Bootstrap 5.3.x (Most current version)<br><br>
-        <b>Databases:</b> SQL Databases (SQLite) - Firebase RealTime Database (NoSQL)<br><br>
+    <p style="font-size: small;"><b>Front-End:</b> HTML & CSS - pure JavaScript<br>
+        <b>Back-End:</b> Python - Lua<br>
+        <b>Frameworks:</b> Flask (Python WebDev) - Bootstrap 5.3.x (Most current version)<br>
+        <b>Databases:</b> SQL Databases (SQLite) - Firebase RealTime Database (NoSQL)<br>
         <b>Project Presentation / Graphic Designing:</b> Canva - Pixlr - Microsoft PowerPoint
     </p>
     <img src="https://www.gstatic.com/devrel-devsite/prod/v37f55fe835aa1d3f6236af95c23fa834466468c2920b868f810fdf5b149e5d9f/firebase/images/lockup.svg" alt="Firebase Logo" width="100" height="110" style="margin-right: 5%;">
@@ -54,13 +54,13 @@
     <h2>My Work: 🛠️</h2>
     <p id="light-text"><i>Only showcasing the work I've deemed the best!</i></p>
     <a href="https://github.com/Kevin-CNC/Enc2024-Cryptography"><b>Imagica - Image Based Encryption</b></a>
-    <p><i>A tool which uses a user-given image and a custom-made encryption algorithm, to encrypt a piece of data securely! <b>Winner of the London Encode 24th-27th October competition for 'Best Cryptography for society'</b></i><br><br></p>
+    <p style="font-size: x-small;"><i>A tool which uses a user-given image and a custom-made encryption algorithm, to encrypt a piece of data securely! <b>Winner of the London Encode 24th-27th October competition for 'Best Cryptography for society'</b></i><br><br></p>
     
     <a href="https://github.com/Kevin-CNC/Seriala-Auto-Json-serialiser"><b>Seriala - Automatic Json Serialiser</b></a>
-    <p><i>Custom-Made API tool that serialises JSON data into classes; Supports 4 Languages (Python, C#, Java and Javascript) & 3 Case-Types too! (Snake Case, Pascal Case & Camel Case)</i><br><br></p>
+    <p style="font-size: x-small;"><i>Custom-Made API tool that serialises JSON data into classes; Supports 4 Languages (Python, C#, Java and Javascript) & 3 Case-Types too! (Snake Case, Pascal Case & Camel Case)</i><br><br></p>
 
     <a href="https://github.com/Kevin-CNC/Portafolio"><b>My portafolio page</b></a>
-    <p><i>I've revamped my old portafolio website, making it more appealing to the eye!</i><br><br></p>
+    <p style="font-size: x-small;"><i>I've revamped my old portafolio website, making it more appealing to the eye!</i><br><br></p>
     <p id="light-text"><i>p.s: Click outside of the dashboard to close it!</i></p>
   </div>
 
@@ -77,7 +77,8 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="main-jscript.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
+
 
