--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="main-css.css" />
 </head>
 <body class="fade-in">
   <div class="container text-center mt-5">
@@ -77,7 +77,7 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="main.js"></script>
+  <script src="main-jscript.js"></script>
 </body>
 </html>
 
