--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <h2>Contact me! 📧</h2>
     <p><b>If you wanna contact me for business-related matters, please feel free to do so through:</b><br><br></p>
     <a href="mailto:kevincncaplescu@gmail.com"><b>My work email: kevincncaplescu@gmail.com</b><br></a>
-    <a href="www.linkedin.com/in/kevin-caplescu"><b>Official LinkedIn profile</b><br><br></a>
+    <a href="https://www.linkedin.com/in/kevin-caplescu/"><b>Official LinkedIn profile</b><br><br></a>
 
     <p><b>Feel also free to download my CV if you wish:</b><br></p>
-    <a style="font-size:25px" href="KevinCaplescuCV.pdf" download="Kevin_C_CV.pdf.pdf"><u>Kevin Caplescu's CV📄 (15/12/2024)</u><br><br><a></a>
+    <a style="font-size:25px" href="KevinCaplescuCV.pdf" download="Kevin_C_CV.pdf"><u>Kevin Caplescu's CV📄 (15/12/2024)</u><br><br><a></a>
     <p id="light-text"><i>p.s: Click outside of the dashboard to close it!</i></p>
   </div>
 
