--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <a href="https://www.linkedin.com/in/kevin-caplescu/"><b>Official LinkedIn profile</b><br><br></a>
 
     <p><b>Feel also free to download my CV if you wish:</b><br></p>
-    <a style="font-size:25px" href="KevinCaplescuCV.pdf" download="Kevin_C_CV.pdf"><u>Kevin Caplescu's CV📄 (15/12/2024)</u><br><br><a></a>
+    <a style="font-size:25px" href="KevinC_CV.pdf" download="KevinC_CV.pdf"><u>Kevin Caplescu's CV📄 (15/12/2024)</u><br><br><a></a>
     <p id="light-text"><i>p.s: Click outside of the dashboard to close it!</i></p>
   </div>
 
